# cxg

./: .claude.md  .gitignore  ARCHITECTURE_SUMMARY.md  AUTHENTICATION_FLOW.md  BACKEND_API_DOCUMENTATION_INDEX.md  BILL_PLANS_EXAMPLES.md  BILL_PLANS_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_SUMMARY.md  GRAPHQL_ENDPOINT_SEPARATION.md  INFINITE_LOOP_FIX_SUMMARY.md  JIRA_FILTER_POPUP_IMPLEMENTATION.md  LOGIN_WORKFLOW.md  MANAGER_WEB_ANALYSIS.md  MANAGER_WEB_USERS_ADD_FIX.md  ME_FIELD_IMPLEMENTATION.md  NAMING_CONVENTION_ANALYSIS.md  PAGE_HEADER_BUTTON_REFACTORING.md  QUERY_FILTER_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  ROLES_IMPORT_FIX.md  SEARCH_FILTER_USAGE.md  UNIFIED_SEARCH_FILTER_ARCHITECTURE.md  USERS_ADD_INFINITE_LOOP_FIX.md  backend_architecture_analysis.md  docker-compose.dev.yml  module_file_references.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend-api/: .env.example  .gitignore  .pre-commit-config.yaml  GRAPHQL_STRUCTURE_GUIDE.md  HYBRID_GRAPHQL_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROGRESS.md  README.md  STRAWBERRY_IMPORT_FIX.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt  test_imports.py
apps/backend-api/.github/workflows/: ci.yml
apps/backend-api/alembic/: env.py  script.py.mako
apps/backend-api/alembic/versions/: 001_init_auth.py  20251020_1442_add_password_reset_fields_to_users_table.py
apps/backend-api/docs/implementation/backend-api/: API_라우터_정리_20251026184500.md  API_태그_형식_변경_20251026185000.md  API_태그_형식_최종통일_20251026190000.md
apps/backend-api/scripts/: check.sh  format.sh  generate_swagger_structure.py  lint.sh  migrate_to_graphql_v3.sh  typecheck.sh
apps/backend-api/scripts/migrations/: 001_ddl_improvements_phase1_manager_20251027.sql  002_ddl_improvements_phase2_tenant_20251027.sql  003_ddl_improvements_manager_p0_20251027.sql  004_ddl_improvements_manager_p1_20251027.sql  005_ddl_improvements_tenant_p0_20251027.sql  006_ddl_improvements_tenant_p1_20251027.sql  099_rollback_all_ddl_improvements_20251027.sql  999_rollback_ddl_improvements_20251027.sql
apps/backend-api/src/: __init__.py  main.py  main.py.backup  main.py.rest_backup
apps/backend-api/src/_ARCHIVE_REST_API/: README.md
apps/backend-api/src/_ARCHIVE_REST_API/modules/: __init__.py
apps/backend-api/src/_ARCHIVE_REST_API/modules/manager/: __init__.py
apps/backend-api/src/_ARCHIVE_REST_API/modules/shareds/: __init__.py
apps/backend-api/src/_ARCHIVE_REST_API/modules/tenants/: __init__.py
apps/backend-api/src/_ARCHIVE_REST_API/routers/: __init__.py
apps/backend-api/src/_ARCHIVE_REST_API/routers/manager/: __init__.py  v1.py  v1.py.backup  v1.py.old
apps/backend-api/src/_ARCHIVE_REST_API/routers/tenants/: __init__.py  v1.py  v1.py.backup  v1.py.old  v1_full.py
apps/backend-api/src/ai/: __init__.py
apps/backend-api/src/api/: main.py
apps/backend-api/src/api/core/: config.py  database.py
apps/backend-api/src/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  init_schemas.py  logging.py  middleware.py  security.py
apps/backend-api/src/graphql/: context.py  decorators.py  loaders.py  schema.py
apps/backend-api/src/graphql/common/: MIGRATION_GUIDE.md  README.md  SUMMARY.md  USAGE_EXAMPLE.py  __init__.py  base_loader.py  base_mutations.py  base_permissions.py  base_queries.py  base_types.py  converters.py  interfaces.py  scalars.py
apps/backend-api/src/graphql/common/code_help/: __init__.py  constants.py  queries.py  resolvers.py  types.py
apps/backend-api/src/graphql/common/generators/: query_generator.py  schema_loader.py  type_generator.py
apps/backend-api/src/graphql/manager/: root_schema.py  schema.py
apps/backend-api/src/graphql/manager/auth/: __init__.py  loaders.py  mutations.py  permissions.py  queries.py  resolvers.py  types.py
apps/backend-api/src/graphql/manager/dashboard/: __init__.py  queries.py  types.py
apps/backend-api/src/graphql/tenants/: root_schema.py  schema.py
apps/backend-api/src/models/: __init__.py  base.py
apps/backend-api/src/models/manager/: __init__.py
apps/backend-api/src/models/manager/audt/: __init__.py  audit_logs.py  compliances.py  policies.py
apps/backend-api/src/models/manager/auto/: __init__.py  executions.py  tasks.py  workflows.py
apps/backend-api/src/models/manager/bill/: __init__.py  invoices.py  plans.py  transactions.py
apps/backend-api/src/models/manager/bkup/: __init__.py  executions.py  recovery_plans.py  schedules.py
apps/backend-api/src/models/manager/cnfg/: __init__.py  configurations.py  feature_flags.py  service_quotas.py  tenant_features.py
apps/backend-api/src/models/manager/idam/: __init__.py  api_key.py  login_log.py  permission.py  role.py  role_permission.py  session.py  user.py  user_role.py
apps/backend-api/src/models/manager/ifra/: __init__.py  resource_usages.py  resources.py
apps/backend-api/src/models/manager/intg/: __init__.py  apis.py  rate_limits.py  webhooks.py
apps/backend-api/src/models/manager/mntr/: __init__.py  health_checks.py  incidents.py  system_metrics.py
apps/backend-api/src/models/manager/noti/: __init__.py  campaigns.py  notifications.py  templates.py
apps/backend-api/src/models/manager/stat/: __init__.py  tenant_stats.py  usage_stats.py
apps/backend-api/src/models/manager/supt/: __init__.py  feedbacks.py  ticket_comments.py  tickets.py
apps/backend-api/src/models/manager/tnnt/: __init__.py  subscription.py  tenant.py
apps/backend-api/src/models/tenants/: __init__.py  base.py
apps/backend-api/src/models/tenants/adm/: __init__.py  code_groups.py  codes.py  currencies.py  exchange_rates.py  glossary.py  payment_terms.py  settings.py  units.py
apps/backend-api/src/models/tenants/apm/: __init__.py  approval_histories.py  approval_line_items.py  approval_lines.py  approval_requests.py
apps/backend-api/src/models/tenants/asm/: __init__.py  customer_feedback.py  faqs.py  nps_surveys.py  service_parts.py  (+4 more)
apps/backend-api/src/schemas/: __init__.py  response.py
apps/backend-api/tests/: conftest.py
apps/backend-api/tests/integration/: test_auth.py
(+3232 files in other folders)
