[project]
name = "cxg-backend-api"
version = "0.1.0"
description = "CXG Platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # SQLAlchemy (2.0+)
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",              # PostgreSQL async driver
    "psycopg2-binary>=2.9.9",       # PostgreSQL sync driver (fallback)
    "greenlet>=3.0.0",              # SQLAlchemy async 필수
    
    # Pydantic (FastAPI와 호환)
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database migrations
    "alembic>=1.13.0",
    
    # Redis
    "redis>=5.0.0",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",
    
    # Code quality
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    
    # Type stubs
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
]

ai = [
    "openai>=1.10.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "pinecone-client>=3.0.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"